# ChangeLog for x11-apps/xdm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.78 2008/02/05 11:32:12 corsair Exp $

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> xdm-1.1.6.ebuild:
  Stable on ppc64

  27 Jan 2008; Raúl Porcel <armin76@gentoo.org> xdm-1.1.6.ebuild:
  alpha/ia64/sparc stable

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xdm-1.1.6.ebuild:
  Stable on x86 (bug #202087)

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -xdm-1.0.5.ebuild:
  Drop old ebuilds.

*xdm-1.1.6 (08 Sep 2007)

  08 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>; +xdm-1.1.6.ebuild:
  Bump for 7.3.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> xdm-1.1.4.ebuild:
  Stable on sparc wrt #175465

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> xdm-1.1.4.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> xdm-1.1.4.ebuild:
  alpha stable wrt #175465

  28 Jun 2007; Joshua Kinard <kumba@gentoo.org> xdm-1.1.4.ebuild:
  Stable on mips, per #175465.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> xdm-1.1.4.ebuild:
  Stable for HPPA (bug #175465).

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xdm-1.1.4.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> xdm-1.1.4.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> xdm-1.1.4.ebuild:
  Stable on ia64 wrt bug #175465

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> xdm-1.1.4.ebuild:
  Stable on ppc64; bug #175465

  21 Apr 2007; Joshua Baergen <joshuabaergen@gentoo.org> -xdm-1.1.0.ebuild,
  -xdm-1.1.3.ebuild:
  Drop unused versions.

*xdm-1.1.4 (16 Feb 2007)

  16 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org> +xdm-1.1.4.ebuild:
  Version bump.  Includes minor bugfixes.

*xdm-1.1.3 (16 Dec 2006)

  16 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org> -xdm-1.1.2.ebuild,
  -xdm-1.1.2-r1.ebuild, +xdm-1.1.3.ebuild: