@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX Xsession 1521 RMD160 c02efb9e96a8dc836d71aa1b47c36358ad61129c SHA1 b94699037a667c716462296c25b4d912fd5d783b SHA256 8a09cd1cef9ebce190e13009e8b21a8504eac1cec3fc31a10d3740b6c7aa49b6
 AUX wtmp.patch 799 RMD160 515f6fb67c43877c41384a5012a9afea047b6f22 SHA1 2591d85c31703f46b643894515823c47a707151b SHA256 7ce7c837484e380be21022ffa4e306ee8c555fbffd6e53e85aef59f24074020d
 AUX xdm.pamd 169 RMD160 3966ca34d9600db06be7e672b66b0ae23c8e9282 SHA1 48e97b23aefa2ed4bacd4b8bd0b9bed424faead7 SHA256 5e334101825dba22adacefc3becc9294e6ff7e6834b6d58f228fec9b0df8259b
@@ -5,6 +8,14 @@ AUX xwilling-hang.patch 589 RMD160 1c624acd002d4b45cf6fb318ab4010425120c09b SHA1
 DIST xdm-1.1.4.tar.bz2 386272 RMD160 40a13574822349e030310de0729eb0b37c95847a SHA1 facf81071a4308c63f3dfd897d7f4a755da5b1bd SHA256 928238ea20e074372659b2902de0e0d754083196911319319795fdbfd1ca6073
 DIST xdm-1.1.6.tar.bz2 394175 RMD160 24f5d5fef2e608b7a0a0f7efd174e4d536663c90 SHA1 9b5642407f01bbdaa8ad699e2d2417bd26372c53 SHA256 c41ac89d9da5c3f5424e9c4871d363ff17acf0fd2a46830931c447ba0b5a8bcd
 EBUILD xdm-1.1.4.ebuild 1381 RMD160 9ba7bd196c7f0419f1b877477078fc56c609bac3 SHA1 ee6d885d61e4673bb7af46003e38092e2dc89763 SHA256 37394219c7b9684d877b0a4ce5fd177bf42c95b4a8997e0f25c1e1111e253b86
+EBUILD xdm-1.1.6-r1.ebuild 1409 RMD160 8ba5acf0896db974e3470f3948bdc8d811ec0a9b SHA1 516ccf5a8f3d5b5369c4994daef6add50d43c26f SHA256 d218df5d26fa4c2b12cfb5bd26e78cf931648e4190768769f7f4ae14525ea834
 EBUILD xdm-1.1.6.ebuild 1383 RMD160 7243414518fe064d57287a631c9cacd47a151ec7 SHA1 84db03f07fbf761c65e4b4a93579a8e5558115da SHA256 0e2970f13180967224bfa37eff91e2aecd0e6029ecbdedade97a4f1816df0eba
-MISC ChangeLog 12247 RMD160 de0056eb50b208fb1c8be4a06387dfda120d47bb SHA1 1ecae5bdefd99b8d77661264b5732d4714d31dab SHA256 bfc7136ee495515cce1904c40a3c0289f83e0595c0b521535476b5249aadf380
+MISC ChangeLog 12497 RMD160 8c7dc718b75f3e7e629882db2fe485fcc9d4b633 SHA1 912974464b87e3ba4e6daa4a1a14204d5c0b84eb SHA256 adde0e712bc34101c101ae65300247fe676ff7b1e447c97a451a6ed06a27c6ed
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHvcw4AiZjviIA2XgRAqsvAKCGK/QJC/0h9uzfmFZaS54kaPuSXQCgopNk
+WvtDn58ZrOGWBvbz1VhWBQQ=
+=Ba9l
+-----END PGP SIGNATURE-----
