@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/xdm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.78 2008/02/05 11:32:12 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.79 2008/02/21 19:08:34 flameeyes Exp $
+
+*xdm-1.1.6-r1 (21 Feb 2008)
+
+  21 Feb 2008; Diego Pettenò <flameeyes@gentoo.org> +xdm-1.1.6-r1.ebuild:
+  New revision that uses pambase. It also properly depend om PAM when pam USE
+  flag is enabled, and moves sessreg and xrdb into RDEPEND only.
 
   05 Feb 2008; Markus Rothe <corsair@gentoo.org> xdm-1.1.6.ebuild:
   Stable on ppc64
